// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto produces correct array of computed placements 1`] = `
Array [
  "bottom",
  "top",
  "right",
  "left",
]
`;

exports[`auto-end produces correct array of computed placements 1`] = `
Array [
  "bottom-start",
  "bottom-end",
  "top-start",
  "top-end",
  "right-start",
  "right-end",
  "left-start",
  "left-end",
]
`;

exports[`auto-end produces correct array of computed placements when flipVariations: false 1`] = `
Array [
  "bottom-end",
  "top-end",
  "right-end",
  "left-end",
]
`;

exports[`auto-start produces correct array of computed placements 1`] = `
Array [
  "bottom-start",
  "bottom-end",
  "top-start",
  "top-end",
  "right-start",
  "right-end",
  "left-start",
  "left-end",
]
`;

exports[`auto-start produces correct array of computed placements when flipVariations: false 1`] = `
Array [
  "bottom-start",
  "top-start",
  "right-start",
  "left-start",
]
`;
